    // version of protocol buffer used
    syntax = "proto3";

    package zkp_auth;

    service Zkp {
    // function which can be called
      rpc Send (ZkpRequest) returns (ZkpResponse);
    }

    message ZkpRequest {
    // data type and position of data
      string name = 1;
    }

    message ZkpResponse {
    // data type and position of data
      string message = 1;
    }